This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
5/25/22: SEM_4-0-7
5/25/22: Allowed View shift offset to be reset in STEM mode (In 4.0).

5/24/22: Changes to support Gatan Alpine camera (In 4.0).

5/24/22: Fixed montaging with idoc file, broken 4/22/22 (In 4.0).

5/20/22: Fixed warning of difference between binning of montage set to be
opened during Navigator acquire and Record binning to access right camera
control set (In 4.0).

5/20/22: Fixed hiding of items for some control panels when options section is
not being hidden (In 4.0).

5/18/22: Created directory for copying EER gain reference if it is not there
yet (In 4.0).

5/17/22: Returned DE dark reference image with server 2.5 (In 4.0).

5/17/22: Fixed one source of zero intensity calibrations (In 4.0).

5/17/22: Fixed checking for high flash advised instead of low in Navigator
Acquire (In 4.0).

4/30/22: SEM_4-0-6
4/30/22: Fixed default for PythonModulePath so this property really shouldn't
be needed if PythonModules in directory with SerialEM.exe (In 4.0).

4/30/22: Made EchoBreakLines available in Python and made it break lines at
'\n' without needing the | prefix (In 4.0).

4/30/22: Changes to be able to take DE dark references with 2.5 server
version, with fixed number of repeats (In 4.0).

4/30/22: Fixed anchor map and realign to item returning to "prior state" in
state dialog instead of forgetting that state (In 4.0).

4/27/22: Restored "Save one frame per file" to Frame Options dialog (In 4.0).

4/27/22: Added manifest entries that may prevent "Error adding Python process
to job object" (In 4.0).

4/24/22: Fixed crash autofocusing with tilted floating point images (In 4.0).

4/24/22: Fixed crash rotating floating point map image (In 4.0).
