@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+5/27/22: Fix reading montage from HDF file with Read from Other (In 4.0).
+
 5/25/22: SEM_4-0-7
 5/25/22: Allowed View shift offset to be reset in STEM mode (In 4.0).
 
